@@ -2,6 +2,7 @@ Version 1.7.10+svn:
  * Language and i18n:
    * Updated translations: Chinese (Simplified), Estonian, French, Latvian,
      Portuguese (Brazil), Russian, Serbian, Slovak, Spanish
+   * Manual: updated CSS style to cover Docbook markup for GUI elements
  * User interface:
    * Add a new repeating button widget
    * Scrollbar buttons now keep scrolling when kept pressed down
